--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -129,11 +129,11 @@
 \end{frame}
 
 \begin{frame}[t]{Architecture}
-	\drawGraph{basisinput=1cm}
+	\drawOrdinatorArchitecture{basisinput=1cm}
 \end{frame}
 
 \begin{frame}[t]{Architecture}
-	\drawGraph{basisinput=1cm, show_orchestrator=true}
+	\drawOrdinatorArchitecture{basisinput=1cm, show_orchestrator=true}
 \end{frame}
 
 \begin{frame}[t]{}
