--- a/papers/actor-based-large-neighborhood-search/tex/discussion.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/discussion.tex
@@ -39,7 +39,7 @@ used to model and optimize larger scale scheduling processes. A possible extensi
 the actors run a metaheuristic and that each metaheuristic will shared its solutions with the 
 other metaheuristics through atomic pointer swapping. Communicate with the end-user through message
 passing, integrate with a persistence storage through mutex locks, and the lifecycle of each of the 
-metaheuristics will be controled by the orchestrator throug message passing.
+metaheuristics will be controlled by the orchestrator through message passing.
 
 \begin{figure}[H]
 	\centering
@@ -48,7 +48,7 @@ metaheuristics will be controled by the orchestrator throug message passing.
 	\caption{
 		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
 		is an actor it becomes possible to optimize parts of a large process individually instead of 
-		optimizing the scheduling problem globally from a single model inplementation.
+		optimizing the scheduling problem globally from a single model implementation.
 	}
 	\label{fig:ordinator-architecture}
 \end{figure}
