--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -4,9 +4,9 @@ efficient and effective execution. This thesis will propose a generalized multi-
 maintenance scheduling to more forward similar approaches will have to be adopted. Other approaches may be very different but they will share many 
 of the aspects. 
 
-This Ph.D. will present a generalized dynamic multi-model approach to maintenance scheduling which will be model after a practical maintenace handbook \cite{palmer_maintenance_2019}.
+This Ph.D. will present a generalized dynamic multi-model approach to maintenance scheduling which will be model after a practical maintenance handbook \cite{palmer_maintenance_2019}.
 \begin{table}
-	\begin{tabular}{@{}cll@{}}
+	\begin{tabular}{@{}call@{}}
 		\toprule
 		Type & Symbol & Description \\
 
@@ -16,7 +16,7 @@ This Ph.D. will present a generalized dynamic multi-model approach to maintenanc
 \centering
 \caption{Summary of Sets, Parameters, and Variables}
 \label{tab:model_elements}
-\begin{tabular}{@{}cll@{}} % Alignments: left, center, left
+\begin{tabular}{@{}call@{}} % Alignments: left, center, left
 \toprule
 Type & Symbol & Description \\
 \midrule
@@ -27,13 +27,13 @@ Variable & \( x_{ij} \) & Quantity shipped from supplier \( i \) to customer \( 
 \end{tabular}
 \end{table}
 This book written by the experienced practitioner Richard D. Palmer will be guiding throughout the thesis, so it serves as the main source of validation, 
-and invalidation throughout the thesis, as we explore the academic maintenance scheduling literture and also, and more importantly, it will also be the source 
+and invalidation throughout the thesis, as we explore the academic maintenance scheduling literature and also, and more importantly, it will also be the source 
 which above all else will us us through the process of creating a generalize model setup for maintenance scheduling.
 \begin{table}
     \centering
     \caption{Example of a Simple Table}
     \label{tab:example_table}
-    \begin{tabular}{@{}cll@{}}
+    \begin{tabular}{@{}call@{}}
         \toprule
         Type & Symbol & Description \\
         \midrule
@@ -44,7 +44,7 @@ which above all else will us us through the process of creating a generalize mod
     \end{tabular}
 \end{table}\section{The General Maintenance Scheduling Process}
 This section will provide an overview of the maintenance scheduling process in the most abstracted way possible. It will be important to understand this setup
-throughly as most industries that perform maintanance of a considerable scale follow this process. Many industries are of course unique and deviate
+thoroughly as most industries that perform maintenance of a considerable scale follow this process. Many industries are of course unique and deviate
 from general framework in specific work but the fundamentals are usually quite similar. 
 
 \begin{figure}
@@ -58,7 +58,7 @@ This figure shows
 
 
 \chapter{Modelling the Generalized Setup}
-To model the maintenace process in its entirety we will need mathematical modelling tools that are powerful enough to describe the maintenance
+To model the maintenance process in its entirety we will need mathematical modelling tools that are powerful enough to describe the maintenance
 scheduling process. As the process requires multiple different actors we need a system that enables us to model each of them and specific   
 
 To effectively model a system that contains multiple actors also 
