--- a/papers/actor-based-large-neighborhood-search/doc/elsdoc.tex
+++ b/papers/actor-based-large-neighborhood-search/doc/elsdoc.tex
@@ -495,11 +495,11 @@ manner. \file{elsarticle.cls} provides three commands to format theorem or
 theorem-like environments: 
 
 \begin{vquote}
- \newtheorem{thm}{Theorem}
- \newtheorem{lem}[thm]{Lemma}
+ \newtheorem{them}{Theorem}
+ \newtheorem{lem}[them]{Lemma}
  \newdefinition{rmk}{Remark}
  \newproof{pf}{Proof}
- \newproof{pot}{Proof of Theorem \ref{thm2}}
+ \newproof{pot}{Proof of Theorem \ref{them2}}
 \end{vquote}
 
 The \verb+\newtheorem+ command formats a
@@ -509,14 +509,14 @@ theorem heading.  It also optionally accepts an argument which
 will be printed as an extra heading in parentheses. 
 
 \begin{vquote}
-  \begin{thm} 
+  \begin{them} 
    For system (8), consensus can be achieved with 
    $\|T_{\omega z}$
    ...
      \begin{eqnarray}\label{10}
      ....
      \end{eqnarray}
-  \end{thm}
+  \end{them}
 \end{vquote}  
 
 Clip~\ref{clip5} will show you how some text enclosed between the
