--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -163,7 +163,13 @@
 \end{frame}
 
 \begin{frame}[t]{}
-    \begin{block}{Dynamic }
+    \begin{block}{Uncertainty, Complexity, and Value}
+		\input{}
+    \end{block}
+\end{frame}
+
+\begin{frame}[t]{}
+    \begin{block}{}
     \end{block}
 \end{frame}
 
