--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -44,11 +44,12 @@
         \item Possible Contributions to Operation Research
     \end{itemize}
 \end{frame}
+
 \begin{frame}{}
     \begin{block}{Mathematical Notation: Sets }
 
-	\begin{minipage}
-		$ a \in A_{b,c}^{m}(t, x, y)$
+	\begin{minipage}{0.20\textwidth}
+		$a \in A_{b,c}^{m}(t, x, y)$
 	\end{minipage}
 
 	\begin{itemize}
@@ -164,7 +165,8 @@
 
 \begin{frame}[t]{}
     \begin{block}{Uncertainty, Complexity, and Value}
-		\input{}
+		\input{../../figures/uncertainty-complexity-value.tex}
+		\drawUncertaintyComplexityValue
     \end{block}
 \end{frame}
 
