--- a/figures/metaheuristic_understanding/quality-versus-time.tex
+++ b/figures/metaheuristic_understanding/quality-versus-time.tex
@@ -24,9 +24,7 @@
 \input{../../styles/colors.tex}
 
 \newcommand{\drawReactiveConstraints}[1]{
-	\begin{tikzpicture}[scale=0.6, line width=1.05][
-		
-	]
+	\begin{tikzpicture}[scale=0.6, line width=1.05][]
 
 	\node at (0.0 , 1) [above] {Static};
     \draw (-3.0,  -2.0) -- ( 3.0,  -2.0);
