--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -164,9 +164,31 @@
 \end{frame}
 
 \begin{frame}[t]{}
-    \begin{block}{Uncertainty, Complexity, and Value}
+    \begin{block}{}
+
 		\input{../../figures/uncertainty-complexity-value.tex}
+
 		\drawUncertaintyComplexityValue
+
+
+		% \only<1>{}
+		% \only<2>{
+
+		% 	\begin{itemize}
+		% 		\item An engineering trade off will have to be made
+		% 	\end{itemize}
+		% }
+
+
+		
+    \end{block}
+\end{frame}
+
+\begin{frame}[t]{}
+    \begin{block}{Model setup}
+		\input{../../figures/model-setup-hexagon.tex}
+		\drawModelSetupHexagon
+
     \end{block}
 \end{frame}
 
