--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -168,9 +168,10 @@
 
 		\input{../../figures/uncertainty-complexity-value.tex}
 
-		\drawUncertaintyComplexityValue
-
-
+		\drawUncertaintyComplexityValue[
+			show_useless_operation_research =true,			
+			show_simplistic_heuristics=true,
+		]
 		% \only<1>{}
 		% \only<2>{
 
