--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -169,7 +169,7 @@
 \end{frame}
 
 \begin{frame}[t]{}
-    \begin{block}{}
+    \begin{block}{The Story of Zaabalawi}
     \end{block}
 \end{frame}
 
