--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -30,10 +30,15 @@
 %% \documentclass[final,5p,times,authoryear]{elsarticle}
 %% \documentclass[final,5p,times,twocolumn,authoryear]{elsarticle}
 
+\usepackage{pgf}
+\usepackage{pgfkeys}
+\usepackage{gnuplottex}
+\usepackage{gnuplot-lua-tikz}
+
+
 %% For including figures, graphicx.sty has been loaded in
 %% elsarticle.cls. If you prefer to use the old commands
 %% please give \usepackage{epsfig}
-
 %% The amssymb package provides various useful mathematical symbols
 \usepackage{amssymb}
 \usepackage{graphicx}
@@ -42,6 +47,8 @@
 \usepackage{algorithm}
 \usepackage{algorithmicx}
 \usepackage{algpseudocode}
+\usepackage{pgfplots}
+\usepackage{epstopdf}  % Automates EPS to PDF conversion
 %% The amsthm package provides extended theorem environments
 %% \usepackage{amsthm}
 
