--- a/papers/actor-based-large-neighborhood-search/tex/results.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/results.tex
@@ -87,3 +87,5 @@ work orders are rearranged due to the changes in their value across the differen
 	\end{tabular}
 \end{table}
 
+
+\input{figures/test_plot.tex}
