--- a/papers/actor-based-large-neighborhood-search/figures/test_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/test_plot.tex
@@ -1,118 +1,62 @@
-% GNUPLOT: LaTeX picture with Postscript
-\begingroup
-  \makeatletter
-  \providecommand\color[2][]{%
-    \GenericError{(gnuplot) \space\space\space\@spaces}{%
-      Package color not loaded in conjunction with
-      terminal option `colourtext'%
-    }{See the gnuplot documentation for explanation.%
-    }{Either use 'blacktext' in gnuplot or load the package
-      color.sty in LaTeX.}%
-    \renewcommand\color[2][]{}%
-  }%
-  \providecommand\includegraphics[2][]{%
-    \GenericError{(gnuplot) \space\space\space\@spaces}{%
-      Package graphicx or graphics not loaded%
-    }{See the gnuplot documentation for explanation.%
-    }{The gnuplot epslatex terminal needs graphicx.sty or graphics.sty.}%
-    \renewcommand\includegraphics[2][]{}%
-  }%
-  \providecommand\rotatebox[2]{#2}%
-  \@ifundefined{ifGPcolor}{%
-    \newif\ifGPcolor
-    \GPcolortrue
-  }{}%
-  \@ifundefined{ifGPblacktext}{%
-    \newif\ifGPblacktext
-    \GPblacktexttrue
-  }{}%
-  % define a \g@addto@macro without @ in the name:
-  \let\gplgaddtomacro\g@addto@macro
-  % define empty templates for all commands taking text:
-  \gdef\gplbacktext{}%
-  \gdef\gplfronttext{}%
-  \makeatother
-  \ifGPblacktext
-    % no textcolor at all
-    \def\colorrgb#1{}%
-    \def\colorgray#1{}%
-  \else
-    % gray or color?
-    \ifGPcolor
-      \def\colorrgb#1{\color[rgb]{#1}}%
-      \def\colorgray#1{\color[gray]{#1}}%
-      \expandafter\def\csname LTw\endcsname{\color{white}}%
-      \expandafter\def\csname LTb\endcsname{\color{black}}%
-      \expandafter\def\csname LTa\endcsname{\color{black}}%
-      \expandafter\def\csname LT0\endcsname{\color[rgb]{1,0,0}}%
-      \expandafter\def\csname LT1\endcsname{\color[rgb]{0,1,0}}%
-      \expandafter\def\csname LT2\endcsname{\color[rgb]{0,0,1}}%
-      \expandafter\def\csname LT3\endcsname{\color[rgb]{1,0,1}}%
-      \expandafter\def\csname LT4\endcsname{\color[rgb]{0,1,1}}%
-      \expandafter\def\csname LT5\endcsname{\color[rgb]{1,1,0}}%
-      \expandafter\def\csname LT6\endcsname{\color[rgb]{0,0,0}}%
-      \expandafter\def\csname LT7\endcsname{\color[rgb]{1,0.3,0}}%
-      \expandafter\def\csname LT8\endcsname{\color[rgb]{0.5,0.5,0.5}}%
-    \else
-      % gray
-      \def\colorrgb#1{\color{black}}%
-      \def\colorgray#1{\color[gray]{#1}}%
-      \expandafter\def\csname LTw\endcsname{\color{white}}%
-      \expandafter\def\csname LTb\endcsname{\color{black}}%
-      \expandafter\def\csname LTa\endcsname{\color{black}}%
-      \expandafter\def\csname LT0\endcsname{\color{black}}%
-      \expandafter\def\csname LT1\endcsname{\color{black}}%
-      \expandafter\def\csname LT2\endcsname{\color{black}}%
-      \expandafter\def\csname LT3\endcsname{\color{black}}%
-      \expandafter\def\csname LT4\endcsname{\color{black}}%
-      \expandafter\def\csname LT5\endcsname{\color{black}}%
-      \expandafter\def\csname LT6\endcsname{\color{black}}%
-      \expandafter\def\csname LT7\endcsname{\color{black}}%
-      \expandafter\def\csname LT8\endcsname{\color{black}}%
-    \fi
-  \fi
-    \setlength{\unitlength}{0.0500bp}%
-    \ifx\gptboxheight\undefined%
-      \newlength{\gptboxheight}%
-      \newlength{\gptboxwidth}%
-      \newsavebox{\gptboxtext}%
-    \fi%
-    \setlength{\fboxrule}{0.5pt}%
-    \setlength{\fboxsep}{1pt}%
-    \definecolor{tbcol}{rgb}{1,1,1}%
-\begin{picture}(3400.00,2260.00)%
-    \gplgaddtomacro\gplbacktext{%
-      \csname LTb\endcsname%%
-      \put(280,409){\makebox(0,0)[r]{\strut{}$2$}}%
-      \csname LTb\endcsname%%
-      \put(280,734){\makebox(0,0)[r]{\strut{}$3$}}%
-      \csname LTb\endcsname%%
-      \put(280,1059){\makebox(0,0)[r]{\strut{}$4$}}%
-      \csname LTb\endcsname%%
-      \put(280,1384){\makebox(0,0)[r]{\strut{}$5$}}%
-      \csname LTb\endcsname%%
-      \put(280,1710){\makebox(0,0)[r]{\strut{}$6$}}%
-      \csname LTb\endcsname%%
-      \put(280,2035){\makebox(0,0)[r]{\strut{}$7$}}%
-      \csname LTb\endcsname%%
-      \put(392,204){\makebox(0,0){\strut{}$2$}}%
-      \csname LTb\endcsname%%
-      \put(922,204){\makebox(0,0){\strut{}$3$}}%
-      \csname LTb\endcsname%%
-      \put(1452,204){\makebox(0,0){\strut{}$4$}}%
-      \csname LTb\endcsname%%
-      \put(1983,204){\makebox(0,0){\strut{}$5$}}%
-      \csname LTb\endcsname%%
-      \put(2513,204){\makebox(0,0){\strut{}$6$}}%
-      \csname LTb\endcsname%%
-      \put(3043,204){\makebox(0,0){\strut{}$7$}}%
-    }%
-    \gplgaddtomacro\gplfronttext{%
-      \csname LTb\endcsname%%
-      \put(2178,1850){\makebox(0,0)[r]{\strut{}'<cat'}}%
-    }%
-    \gplbacktext
-    \put(0,0){\includegraphics[width={170.00bp},height={113.00bp}]{test_plot}}%
-    \gplfronttext
-  \end{picture}%
-\endgroup
+\tikzpicture[gnuplot]
+%% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
+%% Mon 25 Nov 2024 11:54:32 AM UTC
+\path (0.000,0.000) rectangle (6.000,4.000);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (0.644,0.616)--(0.824,0.616);
+\draw[gp path] (5.447,0.616)--(5.267,0.616);
+\node[gp node right] at (0.460,0.616) {$2$};
+\draw[gp path] (0.644,1.231)--(0.824,1.231);
+\draw[gp path] (5.447,1.231)--(5.267,1.231);
+\node[gp node right] at (0.460,1.231) {$3$};
+\draw[gp path] (0.644,1.846)--(0.824,1.846);
+\draw[gp path] (5.447,1.846)--(5.267,1.846);
+\node[gp node right] at (0.460,1.846) {$4$};
+\draw[gp path] (0.644,2.461)--(0.824,2.461);
+\draw[gp path] (5.447,2.461)--(5.267,2.461);
+\node[gp node right] at (0.460,2.461) {$5$};
+\draw[gp path] (0.644,3.076)--(0.824,3.076);
+\draw[gp path] (5.447,3.076)--(5.267,3.076);
+\node[gp node right] at (0.460,3.076) {$6$};
+\draw[gp path] (0.644,3.691)--(0.824,3.691);
+\draw[gp path] (5.447,3.691)--(5.267,3.691);
+\node[gp node right] at (0.460,3.691) {$7$};
+\draw[gp path] (0.644,0.616)--(0.644,0.796);
+\draw[gp path] (0.644,3.691)--(0.644,3.511);
+\node[gp node center] at (0.644,0.308) {$2$};
+\draw[gp path] (1.605,0.616)--(1.605,0.796);
+\draw[gp path] (1.605,3.691)--(1.605,3.511);
+\node[gp node center] at (1.605,0.308) {$3$};
+\draw[gp path] (2.565,0.616)--(2.565,0.796);
+\draw[gp path] (2.565,3.691)--(2.565,3.511);
+\node[gp node center] at (2.565,0.308) {$4$};
+\draw[gp path] (3.526,0.616)--(3.526,0.796);
+\draw[gp path] (3.526,3.691)--(3.526,3.511);
+\node[gp node center] at (3.526,0.308) {$5$};
+\draw[gp path] (4.486,0.616)--(4.486,0.796);
+\draw[gp path] (4.486,3.691)--(4.486,3.511);
+\node[gp node center] at (4.486,0.308) {$6$};
+\draw[gp path] (5.447,0.616)--(5.447,0.796);
+\draw[gp path] (5.447,3.691)--(5.447,3.511);
+\node[gp node center] at (5.447,0.308) {$7$};
+\draw[gp path] (0.644,3.691)--(0.644,0.616)--(5.447,0.616)--(5.447,3.691)--cycle;
+\node[gp node right] at (3.979,3.357) {'<cat'};
+\gpcolor{rgb color={0.580,0.000,0.827}}
+\gpsetpointsize{4.00}
+\gp3point{gp mark 1}{}{(0.644,0.616)}
+\gp3point{gp mark 1}{}{(1.605,1.231)}
+\gp3point{gp mark 1}{}{(2.565,1.846)}
+\gp3point{gp mark 1}{}{(3.526,2.461)}
+\gp3point{gp mark 1}{}{(4.486,3.076)}
+\gp3point{gp mark 1}{}{(5.447,3.691)}
+\gp3point{gp mark 1}{}{(4.621,3.357)}
+\gpcolor{color=gp lt color border}
+\draw[gp path] (0.644,3.691)--(0.644,0.616)--(5.447,0.616)--(5.447,3.691)--cycle;
+%% coordinates of the plot area
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{0.644cm}{0.616cm}}{\pgfpoint{5.447cm}{3.691cm}}
+\endtikzpicture
+%% gnuplot variables
+
