--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -166,12 +166,12 @@
 \begin{frame}[t]{}
     \begin{block}{}
 
-		\input{../../figures/uncertainty-complexity-value.tex}
+		% \input{../../figures/uncertainty-complexity-value.tex}
 
-		\drawUncertaintyComplexityValue[
-			show_useless_operation_research =true,			
-			show_simplistic_heuristics=true,
-		]
+		% \drawUncertaintyComplexityValue[
+		% 	show_useless_operation_research =true,			
+		% 	show_simplistic_heuristics=true,
+		% ]
 		% \only<1>{}
 		% \only<2>{
 
