--- a/figures/uncertainty-complexity-value.tex
+++ b/figures/uncertainty-complexity-value.tex
@@ -24,12 +24,11 @@
 	\draw[domain=0:15,samples=100,smooth,variable=\x,thick,dtu-red]
 		plot ({\x}, {exp(-(\x - 15)/7) - 1 }) node[right] {};
 
-	\fill[dtu-green] (7.5, 1.91954) circle (0.2cm);
-	\node[above] at (7.5, 1.91954) {Correct Model for that business process};
+	% \fill[dtu-green] (7.5, 1.91954) circle (0.2cm);
+	% \node[above] at (7.5, 1.91954) {Correct Model for that business process};
 	
 	% \ifthenelse{/uncertaintyComplexity/show_useless_operational_research}{
-
-	% 	\node at (0,0) {aKLSDJASDJlk}
+	% 	\node at (0,0) {}
 	% }
 
 
