--- a/figures/asynchronous_setup.tex
+++ b/figures/asynchronous_setup.tex
@@ -1,5 +1,5 @@
 \usetikzlibrary{positioning}
-\usetikzlibrary{arrows.meta}
+% \usetikzlibrary{arrows.meta}
 \usetikzlibrary{bending}
 \usetikzlibrary{backgrounds}
 \input{../../styles/colors.tex}
