--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -4,15 +4,15 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{makecell}
 
 \usepackage[T1]{fontenc}
 \usepackage{booktabs}
 \usepackage{multicol}
+\usepackage{makecell}
 \usepackage{natbib}
 \usepackage{hyperref}
-\usepackage{booktabs} % For professional quality tables
-\usepackage{array}    % For better column alignment
+\usepackage{booktabs} 
+\usepackage{array}    
 \usepackage{tabularx}
 \usepackage{tikz}
 
